force-app/main/default/objects/custom_create36__c/custom_create36__c.object-meta.xml
<CustomObject>
    <label>Custom created object36</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects36</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>