force-app/main/default/objects/custom_create36__c/fields/custom_create_36field540__c.field-meta.xml
<CustomField>
    <fullName>custom_create_36field540__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 36field540</label>
    <type>Checkbox</type>
</CustomField>