force-app/main/default/objects/custom_create36__c/fields/custom_create_36field619__c.field-meta.xml
<CustomField>
    <fullName>custom_create_36field619__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 36field619</label>
    <type>Checkbox</type>
</CustomField>